src/objects/NokiaCPQ_PMDI_Parameter__c.object
<CustomObject>
    <description>This is the object to store the Product Master Data Integration parameters. This is part of the PoC for the CPQ PMDI Blueprinting.</description>
    <fields>
        <fullName>NokiaCPQ_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ObjNameSrc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ObjNameTrg__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ParaFrom__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parameter From</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ParaTo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parameter To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ParaType__c</fullName>
        <description>This is the value list for the PMDI parameters that control the interface EDP -&gt; Salesforce.</description>
        <label>Parameter Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMDI_Parameter_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ReqMap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Mapping</label>
        <type>Checkbox</type>
    </fields>
    <label>PMDI Parameter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NokiaCPQ_ObjNameTrg__c</columns>
        <columns>NokiaCPQ_ObjNameSrc__c</columns>
        <columns>NokiaCPQ_ParaFrom__c</columns>
        <columns>NokiaCPQ_ParaTo__c</columns>
        <columns>NokiaCPQ_ParaType__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SK_PMDI_parameters</fullName>
        <columns>NAME</columns>
        <columns>NokiaCPQ_ParaType__c</columns>
        <columns>NokiaCPQ_Active__c</columns>
        <columns>NokiaCPQ_ObjNameSrc__c</columns>
        <columns>NokiaCPQ_ObjNameTrg__c</columns>
        <columns>NokiaCPQ_ParaFrom__c</columns>
        <columns>NokiaCPQ_ParaTo__c</columns>
        <columns>NokiaCPQ_ReqMap__c</columns>
        <filterScope>Mine</filterScope>
        <label>SK - PMDI parameters</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PMDI Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMDI Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>